Added Smoth animation fadeIn

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,12 @@
 body {
   background: #EAEDED;
 }
+
+@-webkit-keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
+@keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
