--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@ body {
   from { opacity: 0; }
     to { opacity: 1; }
 }
+
+@-webkit-keyframes fadeOut {
+  from { opacity: 1; }
+    to { opacity: 0; }
+}
+@keyframes fadeOut {
+  from { opacity: 1; }
+    to { opacity: 0; }
+}
+
